--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,8 +2,10 @@ name: Docker Image
 
 on:
   push:
-    branches: ["main"]
+    branches:
+      - "**"
   pull_request:
+  workflow_dispatch:
 
 jobs:
   build:
