Switch to GHCR image, update README, and refine GitHub Actions workflow
- Replaced Docker build with a prebuilt GHCR image in `docker-compose.yml`.
- Added usage instructions for the GHCR image in `README.md`.
- Limited GitHub Actions triggers to the `master` branch, added permissions, and enabled login/push to GHCR.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,6 @@
 services:
   sub-mirror:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    image: ghcr.io/x-happy-x/sub-mirror:latest
     ports:
       - "0.0.0.0:25500:8788"
       - "0.0.0.0:25501:8787"
