Add support for profile-based header configuration and random profile generation
- Updated application to allow header configuration via YAML profiles with flexible merging and override policies (`prefer_request`, `file_only`, and `require_request`).
- Introduced new `/profile/random` endpoint for generating random profiles based on predefined templates.
- Enhanced `docker-compose.yml` with volume mapping for profile storage and added `PROFILE_DIR` environment variable.
- Expanded `README.md` to include detailed usage instructions for profiles, endpoints, and configuration.
- Updated `server.js` to implement profile handling, request merging logic, and extend logging with profile usage.
- Added default profile `default.yml` under the `profiles` directory.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,10 +6,12 @@ services:
       - "0.0.0.0:25501:8787"
     volumes:
       - ./data:/data
+      - ./profiles:/profiles:ro
     environment:
       SUB_URL: ""
       USE_CONVERTER: "1"
       CONVERTER_URL: "http://127.0.0.1:8787/sub"
       SOURCE_URL: "http://127.0.0.1:8788/source.txt"
+      PROFILE_DIR: "/profiles"
       APP_PORT: "8788"
       SUBCONVERTER_PORT: "8787"
